@@ -3,6 +3,9 @@
    - stevesk@cvs.openbsd.org 2001/04/15 01:35:22
      [ttymodes.c]
      fix comments
+   - markus@cvs.openbsd.org 2001/04/15 08:43:47
+     [dh.c sftp-glob.c sftp-glob.h sftp-int.c sshconnect2.c sshd.c]
+     some unused variable and typos; from tomh@po.crl.go.jp
 
 20010415
  - OpenBSD CVS Sync
@@ -5088,4 +5091,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1117 2001/04/15 14:25:12 mouring Exp $
+$Id: ChangeLog,v 1.1118 2001/04/15 14:27:16 mouring Exp $
